--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body, a:link, a:visited, a:active{
 
 .brey{
   -webkit-transition: top 1s, left 1s, height .5s, width .5s;
-  background: url('albrey2.png');
+  background: url('assets/albrey2.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
@@ -53,7 +53,7 @@ body, a:link, a:visited, a:active{
 
 .jamil{
   -webkit-transition: top 1s, left 1s, height .5s, width .5s;
-  background: url('jamil.png');
+  background: url('assets/jamil.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
@@ -64,7 +64,7 @@ body, a:link, a:visited, a:active{
 
 .alan{
   -webkit-transition: top 1s, left 1s, height .5s, width .5s;
-  background: url('alan.png');
+  background: url('assets/alan.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
@@ -75,7 +75,7 @@ body, a:link, a:visited, a:active{
 
 .marc{
   -webkit-transition: top 1s, left 1s, height .5s, width .5s;
-  background: url('marc.png');
+  background: url('assets/marc.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
@@ -85,7 +85,7 @@ body, a:link, a:visited, a:active{
 }
 .mo{
   -webkit-transition: top 1s, left 1s, height .5s, width .5s;
-  background: url('mo.png');
+  background: url('assets/mo.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
@@ -96,7 +96,7 @@ body, a:link, a:visited, a:active{
 
 .khaled{
   -webkit-transition: top 1s, left 1s, height .5s, width .5s;
-  background: url('anotherone.png');
+  background: url('assets/anotherone.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
