--- a/styles.css
+++ b/styles.css
@@ -95,8 +95,29 @@ body, a:link, a:visited, a:active{
 }
 
 .khaled{
-  -webkit-transition: top 1s, left 1s, height .5s, width .5s;
+   -webkit-transition: spin 3s;
   background: url('assets/anotherone.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border: 0;
+  position:absolute;
+  width:  100px;
+  height: 100px;
+}
+.kevin{
+  -webkit-transition: top 1s, left 1s, height .5s, width .5s;
+  background: url('assets/kevin.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border: 0;
+  position:absolute;
+  width:  100px;
+  height: 100px;
+}
+
+.jordan{
+  -webkit-transition: top 1s, left 1s, height .5s, width .5s;
+  background: url('assets/jordan.png');
   background-size: 100%;
   background-repeat: no-repeat;
   border: 0;
